--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <html !DOCTYPE>
 
 <head>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
     <div class="painel">
         <center>
             <h1>0</h1>
-            <img src="remedio.png" alt="Relatorio de medicamento">
+            <img src="./imagens/remedio.png" alt="Relatorio de medicamento">
             <button>Remedio</button>
         </center>
     </div>
@@ -21,7 +21,7 @@
     <div class="painel">
         <center>
             <h1>0</h1>
-            <img src="mama.png" alt="Relatorio de alimentação">
+            <img src="./imagens/mama.png" alt="Relatorio de alimentação">
 
             <button>Mamadeira</button>
         </center>
