Adicionado a imagem da fralda

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     <div class="painel">
         <center>
             <h1>0</h1>
+            <img src="./imagens/fralda.png" alt="Relatorio de medicamento">
             <button>Fralda</button>
+
         </center>
     </div>
     <div class="painel">
